# STED-FM

./: .gitignore  README.md  dataset.ipynb  dataset.py  explore-dataset.ipynb  jump_dataset.py  linear_layer_weights_retrained.pth  loader.py  pyproject.toml  split_als_dataset.py  sted.py  sync-dataset.sh  tarjump.sh  temporary.txt  test.py
.git-rewrite/: backup-refs  commit  heads  index  parse  revs
datasets/: metadata.json
datasets/adeschenes/: VimentinImages.txt  beta2spectrinImages.txt  copy-files.sh
datasets/apelletierrioux/: apelletierrioux-dataset.rtf  cleaned-data.json  copy-files.sh  metadata.py
datasets/braulier/: copy-files.sh  filter-files.txt  metadata.py  readme.txt
datasets/flavoiecardinal/: copy-files.sh  filter-files-actin.txt  filter-files-optim.txt  filter-files.txt  metadata.py  readme-actin.txt  readme-optim.txt
datasets/jchabbert/: Juchab_STED_images_total.txt  cleaned-data.json  copy-files.sh  filter-files.txt  (+1 more)
dummy/: build_als_dataset.py  dataset-example.py  get_examples.py  output.prof  remove_div9.py  remove_div9.sh  training-speed.py
experiments/: ._model_builder.py  DEFAULTS.py  Datasets  configuration.py  dataset_builder.py  datasets.py  dummy.py  finetuning-script.sh  from-scratch-script.sh  get_dataset_stats.py  handle_jumpcp.py  linearprobing-script.sh  loaders.py  model_builder.py  pretrain.py  pretrain_lightning.py  pretrain_script.sh  stats.py  utils.py
notebooks/: stedfm_example.ipynb
stedfm/: DEFAULTS.py  __init__.py  datasets.py  loaders.py  model_builder.py
utils/: msrreader.py
vit_experiments/: train_mae.py
(+687 files in other folders)
